# Win-memory-manager

./: CMakeLists.txt  README.md
doc/: Win_memory_manager_info.docx
scripts/: build.bat
src/: Win_memory_manager.cpp
